--- a/_posts/2016-06-21-nn-sgd.md
+++ b/_posts/2016-06-21-nn-sgd.md
@@ -17,13 +17,13 @@ So, let's back to basic and learn how to create a simple 3-layers Neural Network
 
 First, the dataset. We're going to create toy dataset by using Scikit-Learn `make_moons` function:
 
-``` python
+{% highlight python %}
 from sklearn.datasets import make_moons
 from sklearn.cross_validation import train_test_split
 
 X, y = make_moons(n_samples=5000, random_state=42, noise=0.1)
 X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)
-```
+{% endhighlight %}
 
 To get clearer picture about the dataset, here's the visualization:
 
@@ -31,7 +31,7 @@ To get clearer picture about the dataset, here's the visualization:
 
 Next, we define our NN model. It will be a three layers networks (single hidden layer):
 
-``` python
+{% highlight python %}
 import numpy as np
 
 
@@ -48,11 +48,11 @@ def make_network(n_hidden=100):
     )
 
     return model
-```
+{% endhighlight %}
 
 We will also define two operations: forward propagation and the backpropagation. Let's digest them one by one. We're going to define the forward propagation first.
 
-``` python
+{% highlight python %}
 def softmax(x):
     return np.exp(x) / np.exp(x).sum()
 
@@ -67,7 +67,7 @@ def forward(x, model):
     prob = softmax(h @ model['W2'])
 
     return h, prob
-```
+{% endhighlight %}
 
 The basic scheme is to do series of dot product from input to hidden layer to output layer. In the hidden layer, we also apply some kind of non-linearity so that our NN could predict non-linear decision boundary. The hottest non-linearity function right now is ReLU, and we're going to follow that trend.
 
@@ -76,7 +76,7 @@ Now, ReLU is defined by `f(x) = max(0, x)`. But, rather than doing `np.max(0, x)
 Once we reach the output layer, we need to make the output to be a probability distribution, Bernoulli to be exact, so we squash the output with Softmax function to get our label distribution.
 
 
-``` python
+{% highlight python %}
 def backward(model, xs, hs, errs):
     """xs, hs, errs contain all informations (input, hidden state, error) of all data in the minibatch"""
     # errs is the gradients of output layer for the minibatch
@@ -89,7 +89,7 @@ def backward(model, xs, hs, errs):
     dW1 = xs.T @ dh
 
     return dict(W1=dW1, W2=dW2)
-```
+{% endhighlight %}
 
 For the backprop, we start from the top (output layer) down to the input layer. We start by propagating the error to get the gradient of weight between hidden layer and output layer, then we compute the gradient of hidden layer using the error gradient. Using hidden layer gradient, we then compute the gradient of weight between input and hidden layer.
 
@@ -109,7 +109,7 @@ Now, there are three variants of Gradient Descent: Batch, Stochastic, and Miniba
 
 Let's apply our algorithm of choice Minibatch Gradient Descent:
 
-``` python
+{% highlight python %}
 def sgd(model, X_train, y_train, minibatch_size):
     for iter in range(n_iter):
         print('Iteration {}'.format(iter))
@@ -125,13 +125,13 @@ def sgd(model, X_train, y_train, minibatch_size):
             model = sgd_step(model, X_train_mini, y_train_mini)
 
     return model
-```
+{% endhighlight %}
 
 This is the skeleton of our training algorithm. Notice how we first shuffle the training data first then get chunks from it. That way we will get the random subset with size of `minibatch_size` of our full training data. Each of those random subset will be fed to the networks, and then the gradients of that minibatch will be propagate back to update the parameters/weights of the networks.
 
 The `sgd_step` function is like this:
 
-``` python
+{% highlight python %}
 def sgd_step(model, X_train, y_train):
     grad = get_minibatch_grad(model, X_train, y_train)
     model = model.copy()
@@ -142,7 +142,7 @@ def sgd_step(model, X_train, y_train):
         model[layer] += 1e-4 * grad[layer]
 
     return model
-```
+{% endhighlight %}
 
 First, we get the gradients of each layer of the networks for the current minibatch. Then we use that gradients to update the weights of each layers of the networks. The update operation is very easy. We just add the gradient of particular weight matrix to our existing weight matrix.
 
@@ -150,7 +150,7 @@ To make the learning better, we scale the gradients with a *learning rate* hyper
 
 Lastly, we look at our `get_minibatch_grad` function:
 
-``` python
+{% highlight python %}
 def get_minibatch_grad(model, X_train, y_train):
     xs, hs, errs = [], [], []
 
@@ -174,7 +174,7 @@ def get_minibatch_grad(model, X_train, y_train):
 
     # Backprop using the informations we get from the current minibatch
     return backward(model, np.array(xs), np.array(hs), np.array(errs))
-```
+{% endhighlight %}
 
 What we do here is to iterate every data point in our minibatch, then feed it to the network and compare the output with the true label from the training data. The error is neatly defined by the difference of the probability of true label with the probability of our prediction. This is so, because we're implicitly using the Softmax output with Cross Entropy cost function. See here for full derivation: <http://math.stackexchange.com/questions/945871/derivative-of-softmax-loss-function>
 
@@ -184,7 +184,7 @@ Because this is a Minibatch Gradient Descent algorithm, we then accumulate all t
 
 Let's test our model and algorithm. We're going to repeat the train-test procedure for 100 times then report the average of the accuracy.
 
-``` python
+{% highlight python %}
 minibatch_size = 50
 n_experiment = 100
 
@@ -211,7 +211,7 @@ for k in range(n_experiment):
     accs[k] = (y_pred == y_test).sum() / y_test.size
 
 print('Mean accuracy: {}, std: {}'.format(accs.mean(), accs.std()))
-```
+{% endhighlight %}
 
 With 10 iterations and minibatch size of 50, here's what we get:
 
