--- a/_posts/2016-06-25-dropout.md
+++ b/_posts/2016-06-25-dropout.md
@@ -29,11 +29,11 @@ So, that's why Dropout will increase the test time performance: it improves gene
 
 Let's see the concrete code for Dropout:
 
-``` python
+{% highlight python %}
 # Dropout training
 u1 = np.random.binomial(1, p, size=h1.shape)
 h1 *= u1
-```
+{% endhighlight %}
 
 First, we sample an array of independent Bernoulli Distribution, which is just a collection of zero or one to indicate whether we kill the neuron or not. For example, the value of `u1` would be `np.array([1, 0, 0, 1, 1, 0, 1, 0])`. Then, if we multiply our hidden layer with this array, what we get is the originial value of the neuron if the array element is 1, and 0 if the array element is also 0.
 
@@ -43,22 +43,22 @@ Now, because we're only using `p*n` of the neurons, the output then has the expe
 
 As we don't use Dropout in test time, then the expected output of the layer is `x`. That doesn't match with the training phase. What we need to do is to make it matches the training phase expectation, so we scale the layer output with `p`.
 
-``` python
+{% highlight python %}
 # Test time forward pass
 h1 = X_train @ W1 + b1
 h1[h1 < 0] = 0
 
 # Scale the hidden layer with p
 h1 *= p
-```
+{% endhighlight %}
 
 In practice, it's better to simplify things. It's cumbersome to maintain codes in two places. So, we move that scaling into the Dropout training itself.
 
-``` python
+{% highlight python %}
 # Dropout training, notice the scaling of 1/p
 u1 = np.random.binomial(1, p, size=h1.shape) / p
 h1 *= u1
-```
+{% endhighlight %}
 
 With that code, we essentially make the expectation of layer output to be `x` instead of `px`, because we scale it back with `1/p`. Hence in the test time, we don't need to do anything as the expected output of the layer is the same.
 
@@ -66,9 +66,9 @@ With that code, we essentially make the expectation of layer output to be `x` in
 
 During the backprop, what we need to do is just to consider the Dropout. The killed neurons don't contribute anything to the network, so we won't flow the gradient through them.
 
-``` python
+{% highlight python %}
 dh1 *= u1
-```
+{% endhighlight %}
 
 For full example, please refer to: <https://github.com/wiseodd/hipsternet/blob/master/hipsternet/neuralnet.py>.
 
@@ -76,7 +76,7 @@ For full example, please refer to: <https://github.com/wiseodd/hipsternet/blob/m
 
 Test time! But first, let's declare what kind of network we will use for testing.
 
-``` python
+{% highlight python %}
 def make_network(D, C, H=100):
     model = dict(
         W1=np.random.randn(D, H) / np.sqrt(D / 2.),
@@ -91,7 +91,7 @@ def make_network(D, C, H=100):
 
 
 model = nn.make_network(D, C, H=256)
-```
+{% endhighlight %}
 
 We're using three layers network with 256 neurons in each hidden layer. The weights are initialized using Xavier divided by 2, as proposed by He, et al, 2015. The data used are MNIST data with 55000 training data and 10000 test data. The optimization algorithm used is RMSprop with 1000 iterations, repeated 5 times and the test accuracy is averaged.
 
