--- a/_posts/2017-01-29-infogan.md
+++ b/_posts/2017-01-29-infogan.md
@@ -63,7 +63,7 @@ We will implement InfoGAN for MNIST data, with \\( c \\) categorically distribut
 
 As seen in the loss function of InfoGAN, we need one additional network, \\( Q(c \vert X) \\):
 
-``` python
+{% highlight python %}
 Q_W1 = tf.Variable(xavier_init([784, 128]))
 Q_b1 = tf.Variable(tf.zeros(shape=[128]))
 
@@ -76,44 +76,44 @@ def Q(x):
     Q_h1 = tf.nn.relu(tf.matmul(x, Q_W1) + Q_b1)
     Q_prob = tf.nn.softmax(tf.matmul(Q_h1, Q_W2) + Q_b2)
     return Q_prob
-```
+{% endhighlight %}
 
 that is, we model \\( Q(c \vert X) \\) as a two-layer net with softmax on top. The choice of softmax is because \\( c \\) is categorically distributed, and softmax could pose as its parameter. If we choose \\( c \\) to be Gaussian, then we could design the network so that the outputs are mean and variance.
 
 Next, we specify our prior:
 
-``` python
+{% highlight python %}
 def sample_c(m):
     return np.random.multinomial(1, 10*[0.1], size=m)
-```
+{% endhighlight %}
 
 which is a categorical distribution, with equal probability for each of the ten elements.
 
 As training \\( D \\) and \\( G \\) is not different than vanila GAN and CGAN, we will omit it from this section. To train \\( Q \\), as seen in the regularization term above, we first sample \\( c \\) from \\( P(c) \\), and use it to sample \\( X \\) from \\( Q(X \vert z, c) \\):
 
-``` python
+{% highlight python %}
 G_sample = generator(Z, c)
 Q_c_given_x = Q(G_sample)
-```
+{% endhighlight %}
 
 during runtime, we will populate \\( c \\) with values from `sample_c()`.
 
 Having all ingredients in hands, we could compute the mutual information term, which is the conditional entropy of the prior and our variational distribution, plus the entropy of our prior. Observe however, our prior is a fixed distribution, thus the entropy will be constant and can be left out.
 
-``` python
+{% highlight python %}
 cond_ent = tf.reduce_mean(-tf.reduce_sum(tf.log(Q_c_given_x + 1e-8) * c, 1))
 Q_loss = cond_ent
-```
+{% endhighlight %}
 
 Then, we optimize both \\( G \\) and \\( Q \\), based on that:
 
-``` python
+{% highlight python %}
 Q_solver = tf.train.AdamOptimizer().minimize(Q_loss, var_list=theta_G + theta_Q)
-```
+{% endhighlight %}
 
 We initialized the training as follows:
 
-``` python
+{% highlight python %}
 for it in range(1000000):
     """ Sample X_real, z, and c from priors """
     X_mb, _ = mnist.train.next_batch(mb_size)
@@ -130,7 +130,7 @@ for it in range(1000000):
 
     """ Optimize Q """
     sess.run([Q_solver], feed_dict={Z: Z_noise, c: c_noise})
-```
+{% endhighlight %}
 
 After training, we could see what property our prior \\( c \\) encodes. In this experiment, our \\( c \\) will encode label property nicely, i.e. if we pass `c = [0, 0, 1, 0, 0, 0, 0, 0, 0, 0]`, we might get this:
 
