--- a/_posts/2017-09-07-lda-gibbs.md
+++ b/_posts/2017-09-07-lda-gibbs.md
@@ -54,7 +54,7 @@ Given those full conditionals, the rest is as easy as plugging those into the Gi
 
 We begin with randomly initializing topic assignment matrix \\( \mathbf{Z}\_{N_D \times N_W} \\). We also sample the initial values of \\( \mathbf{\Pi}\_{N_D \times N_K} \\) and \\( \mathbf{B}\_{N_K \times N_W} \\).
 
-``` python
+{% highlight python %}
 # Dirichlet priors
 alpha = 1
 gamma = 1
@@ -77,11 +77,11 @@ B = np.zeros([N_K, N_W])
 
 for k in range(N_K):
     B[k] = np.random.dirichlet(gamma*np.ones(N_W))
-```
+{% endhighlight %}
 
 Then we sample the new values for each of those variables from the full conditionals in the previous section, and iterate:
 
-``` python
+{% highlight python %}
 for it in range(1000):
     # Sample from full conditional of Z
     # ---------------------------------
@@ -119,7 +119,7 @@ for it in range(1000):
 
         # Resample word topic dist.
         B[k, :] = np.random.dirichlet(gamma + n)
-```
+{% endhighlight %}
 
 And basically we are done. We could inspect the result by looking at those variables after some iterations of the algorithm.
 
@@ -127,7 +127,7 @@ And basically we are done. We could inspect the result by looking at those varia
 
 Let's say we have these data:
 
-``` python
+{% highlight python %}
 # Words
 W = np.array([0, 1, 2, 3, 4])
 
@@ -144,7 +144,7 @@ X = np.array([
 N_D = X.shape[0]  # num of docs
 N_W = W.shape[0]  # num of words
 N_K = 2  # num of topics
-```
+{% endhighlight %}
 
 Those data are already in bag of words representation, so it is a little abstract at a glance. However if we look at it, we could see two big clusters of documents based on their words: \\( \\{ 1, 2, 3 \\} \\) and \\( \\{ 4, 5, 6 \\} \\). Therefore, we expect after our sampler converges to the posterior, the topic distribution for those documents will follow our intuition.
 
