--- a/_posts/2021-10-27-laplace.md
+++ b/_posts/2021-10-27-laplace.md
@@ -26,7 +26,7 @@ $$
     \theta_\map := \argmax_\theta \sum_{i=1}^m \log p(y_i \mid f_\theta(x_i)) + \log p(\theta) =: \argmax_\theta \L(\theta; \D) .
 $$
 
-The estimate $\theta_\map$ is referred to as the **_maximum a posteriori (MAP) estimate_**.
+The estimate $\theta_\map$ is referred to as the _maximum a posteriori_ (MAP) estimate.
 However, the MAP estimate does not capture the uncertainty around $\theta$.
 Thus, it often (and in some cases, e.g. [1], almost always) leads to overconfidence.
 
