--- a/_posts/2021-10-27-laplace.md
+++ b/_posts/2021-10-27-laplace.md
@@ -15,7 +15,7 @@ Then, given a prior $p(\theta)$, we can obtain the posterior via an application 
 But, the exact computation of $p(\theta \mid \D)$ is intractable in general due to the need of computing the normalization constant
 
 $$
-    Z = \int_\Theta p(\D \mid \theta) p(\theta) \,d\theta
+    Z = \int_\Theta p(\D \mid \theta) p(\theta) \,d\theta .
 $$
 
 We must then approximate $p(\theta \mid \D)$.
