--- a/_posts/2021-10-27-laplace.md
+++ b/_posts/2021-10-27-laplace.md
@@ -182,7 +182,7 @@ In <span style="font-family: monospace; font-size: 12pt">laplace-torch</span>, t
 ml = la.log_marginal_likelihood(prior_precision)
 ```
 
-This function is compatible with PyTorch's autograd, so we can backpropagate through it to obtain the gradient of $Z$ w.r.t. the prior precision hyperparameter.
+This function is compatible with PyTorch's autograd, so we can backpropagate through it to obtain the gradient of $Z$ w.r.t. the prior precision hyperparameter:
 
 ```python
 ml.backward()  # Works!
